<resources>
    <string name="app_name" translatable="false">Geckos Control</string>
    <string name="profiles_control" translatable="true">Profiles control</string>
    <string name="hubs" translatable="true">My hubs</string>
    <string name="empty_profiles_list" translatable="true">The list of profiles control is empty</string>
    <string name="add_first_profile_control" translatable="true">Create profile</string>

    <string name="no_bluetooth_adapter" translatable="true">No Bluetooth adapter on the device</string>
    <string name="bluetooth_not_enabled" translatable="true">Bluetooth is not enabled</string>
    <string name="no_access_to_geo" translatable="true">No access to geolocation</string>
    <string name="geo_not_enabled" translatable="true">Geolocation is not enabled</string>

    <string name="empty_hubs_list" translatable="true">No connected hubs</string>
    <string name="connect_hubs" translatable="true">Connect hubs</string>

    <string name="empty_ports_list" translatable="true">No ports available</string>
    <string name="connect_more_hubs" translatable="true">Connect more hubs</string>

    <string name="empty_controller_axes_list" translatable="true">Display is empty</string>
    <string name="add_element_control" translatable="true">Add element control</string>

    <string name="default_profile_name" translatable="true">New profile</string>
    <string name="default_hub_name" translatable="false">Gecko Hub</string>
    <string name="yes" translatable="true">Yes</string>
    <string name="no" translatable="true">No</string>

    <string name="no_hub_connection" translatable="true">No connection to the hub</string>

    <string name="no_found_hubs" translatable="true">No hubs detected</string>
    <string name="start_searching_for_hubs" translatable="true">Start searching for hubs</string>
    <string name="searching_for_hubs" translatable="true">There is a search for hubs…\n(Enable hubs to detect them)</string>

    <string name="confirm_msg_profile" translatable="true">Delete the profile</string>
    <string name="confirm_msg_hub" translatable="true">Disconnect hub</string>
    <string name="confirm_msg_display" translatable="true">Delete current display?</string>
    <string name="confirm_msg_element_control" translatable="true">Delete chosen element control?</string>
    <string name="elements_control" translatable="true">Choose an element to add</string>
    <string name="joystick_xy_name" translatable="true">2-axis joystick</string>
    <string name="joystick_x_name" translatable="true">1-axis horizontal joystick</string>
    <string name="joystick_y_name" translatable="true">1-axis vertical joystick</string>
    <string name="image_name" translatable="true">image</string>
    <string name="grid_align" translatable="true">Grid alignment</string>
    <string name="add_display" translatable="true">Add display</string>
    <string name="remove_display" translatable="true">Remove current display</string>
    <string name="remove_element_control" translatable="true">Remove element control</string>
    <string name="element_blocking" translatable="true">Element blocking</string>
    <string name="element_properties" translatable="true">Element properties</string>
    <string name="profile_parameters" translatable="true">Profile parameters</string>
    <string name="element_size" translatable="true">Element size</string>
    <string name="controlled_ports" translatable="true">Port connections</string>
    <string name="binding_ports" translatable="true">Bind ports</string>
    <string name="loading_image" translatable="true">Load image from gallery</string>
    <string name="axis_word" translatable="true">axis</string>
    <string name="add_controlled_port" translatable="true">Add port connection</string>
    <string name="edit_profile" translatable="true">Edit profile</string>
    <string name="too_long_name" translatable="true">The name is too long!</string>
    <string name="alarm_no_permissions" translatable="true">Bluetooth or Location are not enabled!</string>
    <string name="unknown_hub_name" translatable="true">choose a hub</string>
    <string name="unknown_port_name" translatable="true">choose a port</string>
    <string name="unknown_controller_axis_name" translatable="true">choose an element control</string>
    <string name="back" translatable="true">Back</string>
    <string name="editor" translatable="true">Profile editor</string>
    <string name="connecting" translatable="true">Connecting</string>
    <string name="profile_not_ready" translatable="true">Profile is not ready</string>
    <string name="no_port_connections" translatable="true">To be able to use the profile control, you need to add at least one port connection.</string>
    <string name="turn_on_hubs" translatable="true">To control the model, you need to connect hubs.\nTurn on hubs to connect.</string>
    <string name="prohibit_rem_of_disp" translatable="true">Sorry, you can\'t delete the only display in the profile</string>
    <string name="prohibit_add_of_disp" translatable="true">Sorry, you can\'t add a display. Max. number of displays in the profile: 5</string>

    <string name="port_a" translatable="true">port A</string>
    <string name="port_a_inv" translatable="true">port А inverse</string>
    <string name="port_b" translatable="true">port B</string>
    <string name="port_b_inv" translatable="true">port B inverse</string>
    <string name="port_c" translatable="true">port C</string>
    <string name="port_c_inv" translatable="true">port C inverse</string>
    <string name="port_d" translatable="true">port D</string>
    <string name="port_d_inv" translatable="true">port D inverse</string>

    <string name="app_tag" translatable="false">Geckos Control</string>

    <string name="gecko_service_uuid" translatable="false">4ad77a12-4a0b-4daa-a715-ae0cb0427ed3</string>
    <string name="gecko_characteristic_uuid" translatable="false">39789f14-68f7-46f8-92f1-623cde4bdfc7</string>
    <string name="pu_service_uuid" translatable="false">00001623-1212-EFDE-1623-785FEABCD123</string>
    <string name="pu_characteristic_uuid" translatable="false">00001624-1212-EFDE-1623-785FEABCD123</string>
</resources>