<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp">

    <group
        android:id="@+id/group_profile_control_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_alignment_to_grid"
            android:title="@string/grid_align"
            android:icon="@drawable/baseline_grid_on_20"
            android:layout_height="30dp"
            android:checkable="true"/>
        <item
            android:id="@+id/item_add_display"
            android:title="@string/add_display"
            android:icon="@drawable/baseline_add_white_36"
            android:layout_height="30dp"/>
        <item
            android:id="@+id/item_remove_display"
            android:title="@string/remove_display"
            android:icon="@drawable/baseline_delete_white_18dp_36"
            android:layout_height="30dp"/>
    </group>
    <group
        android:id="@+id/group_element_control_menu_1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_lock_element_control"
            android:title="@string/element_blocking"
            android:icon="@drawable/baseline_lock_20"
            android:layout_height="30dp"
            android:checkable="true"
            android:background="@color/black"/>
        <item
            android:title="@string/element_size"
            android:layout_height="30dp"
            android:layout_width="match_parent">
            <menu>
                <item
                    android:id="@+id/item_element_size"
                    android:title=""
                    android:layout_width="match_parent"
                    android:enabled="false"
                    app:actionLayout="@layout/menu_item_changing_size"/>
            </menu>
        </item>
        <item android:title="@string/controlled_ports"
            android:layout_height="100dp"
            android:layout_width="match_parent">
            <menu>
                <item
                    android:id="@+id/item_controlled_ports_1"
                    android:title=""
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    app:actionLayout="@layout/menu_item_controlled_ports" />
                <item
                    android:id="@+id/item_controlled_ports_2"
                    android:title=""
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    app:actionLayout="@layout/menu_item_controlled_ports" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group_element_control_menu_2">
        <item
            android:id="@+id/item_remove_element_control"
            android:title="@string/remove_element_control"
            android:icon="@drawable/baseline_delete_white_18dp_36"
            android:layout_height="30dp"
            android:checkable="true"/>
    </group>
</menu>