<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:minHeight="130dp"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:padding="15dp"
    android:background="?attr/colorPrimary"
    tools:ignore="RtlSymmetry"
    android:theme="@style/Theme.RCBLEProject.NoBackground">

    <TextView
        android:id="@+id/tv_connecting"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="26sp"
        android:text="@string/connecting"
        app:layout_constraintStart_toEndOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_bluetooth_searching_white_20"
        android:background="@drawable/circle_button_profile_control"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_connecting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:foregroundGravity="center"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:background="@null"
        tools:listitem="@layout/item_for_params_list"/>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="Включите хабы для подключения"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_hubs"
        app:layout_constraintBottom_toTopOf="@id/bt_edit"
        android:layout_marginTop="5dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@id/tv_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/background_for_bt_add_ports"/>

    <Button
        android:id="@+id/bt_edit"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:text="@string/editor"
        app:layout_constraintTop_toBottomOf="@id/tv_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_for_bt_add_ports"/>
</androidx.constraintlayout.widget.ConstraintLayout>